--- a/my_botsort.yaml
+++ b/my_botsort.yaml
@@ -2,11 +2,12 @@
 # Default YOLO tracker settings for BoT-SORT tracker https://github.com/NirAharon/BoT-SORT
 
 tracker_type: botsort # tracker type, ['botsort', 'bytetrack']
-track_high_thresh: 0.5 # threshold for the first association
+track_high_thresh: 0.25 # threshold for the first association
 track_low_thresh: 0.1 # threshold for the second association
-new_track_thresh: 0.6 # threshold for init new track if the detection does not match any tracks
+new_track_thresh: 0.25 # threshold for init new track if the detection does not match any tracks
 track_buffer: 30 # buffer to calculate the time when to remove tracks
 match_thresh: 0.8 # threshold for matching tracks
+fuse_score: True # Whether to fuse confidence scores with the iou distances before matching
 # min_box_area: 10  # threshold for min box areas(for tracker evaluation, not used for now)
 # mot20: False  # for tracker evaluation(not used for now)
 
@@ -17,6 +18,5 @@ proximity_thresh: 0.5
 appearance_thresh: 0.25
 with_reid: True
 device: cuda
-reid_config: fast_reid/configs/MOT17/sbs_R50.yml
-reid_weights: fast_reid/reid-weights/mot17_sbs_S50.pth
-# FastReid Settings
+# reid_config: fast_reid/configs/MOT17/sbs_R50.yml
+# reid_weights: fast_reid/reid-weights/mot17_sbs_S50.pth
